# pesquisa-eleitoral-df

./: .env.example  .gitignore  .mcp.json  AUDITORIA_COMPLETA_2026.md  C  CLAUDE.md  CODEX.md  CUsersigormpesquisa-eleitoral-dftemp_env.json  DEPENDENCY_AUDIT_REPORT.md  DIAGNOSTICO.md  GESTAO_CONTEXTO.md  GPS_NAVEGACAO_AGENTES.md  INITIAL.md  MIGRAR_SESSOES.txt  OpenCode_pesquisa-eleitoral-df_2026-01-24.md  PLAN.md  PLANO-MELHORIA-CONTEUDO.md  PLANO_FASE_2_MENSAGENS.md  PLANO_FASE_3_SIMULADOR_AB.md  PLANO_FASE_4_CENARIOS.md  PLANO_FASE_5_MEMORIA_EVOLUTIVA.md  PLANO_FASE_6_GRAFO_INFLUENCIA.md  PLANO_FINAL_CONSOLIDADO.md  PLANO_PERSUASION_ENGINE.md  PROJECT_INDEX.md  README.md  SESSAO_TEMP.md  SETUP.md  VERCEL_SETUP.md  WORK_LOG.md  _CHECKLIST.md  _INDEX.md  _INSIGHTS.md  ajustar_conformidade_v2.py  ajustar_distribuicao.py  ajustar_pontuais.py  ajuste_final_faixas.py  analisar_preocupacoes_valores.py  analise_coerencia_regional.py  analise_correlacoes_completa.py  (+37 more)
backend/: .dockerignore  .env.example  00_INDICE.md  Dockerfile  Makefile  _CHECKLIST.md  _INDEX.md  _INSIGHTS.md  alembic.ini  pyproject.toml  requirements.txt
backend/.claude/: settings.local.json
backend/alembic/: env.py
backend/app/: _INDEX.md  __init__.py  main.py
backend/memorias/: resultados.json
backend/scripts/: __init__.py  criar_tabelas_podc.sql  migrar_eleitores.py
backend/sdk/: __init__.py
backend/templates/: briefing_diario.html  dossie_adversario.html  relatorio_eleitoral.html
backend/tests/: conftest.py  test_api_eleitores.py  test_api_entrevistas.py  test_api_health.py  (+1 more)
(+1134 files in other folders)
